--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/Team-Axolotl-Scratch-Project/Scratch-Project#readme",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "node-fetch": "^2.6.8",
+    "pg": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.7.0",
